--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "dev": "^0.1.3",
     "probot": "^7.0.0",
-    "run": "^1.4.0"
+    "run": "^1.4.0",
+    "prom-client": "^11.2.0",
+    "express": "^4.13.3"
   },
   "devDependencies": {
     "jsdom": "11.11.0",
@@ -33,11 +35,14 @@
     "standard": "^10.0.3"
   },
   "engines": {
-    "node": ">= 8.3.0 <8.12.0"
+    "node": "8.3.0"
   },
   "standard": {
     "env": [
       "jest"
     ]
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
